--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "ethers": "^5.7.2",
-    "next": "12.3.1",
+    "next": "^12.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.33.2",
     "web3modal": "^1.9.12"
   },
   "devDependencies": {
